k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker-deployment
  labels:
    app: task-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-tracker
  template:
    metadata:
      labels:
        app: task-tracker
    spec:
      containers:
        - name: task-tracker
          image: amitabh02/task-tracker:latest
          ports:
            - containerPort: 80
