k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-tracker-service
spec:
  type: Nodeport
  selector:
    app: task-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
