k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: gce
  rules:
    - host: task-tracker.amitabh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-tracker-service
                port:
                  number: 80
